# paper-ecash-web

./: .gitignore  Cargo.toml  Trunk.toml  flake.nix
.github/workflows/: deploy.yml  e2e.yml
crates/invite-code-helper/: Cargo.toml
crates/invite-code-helper/src/: main.rs
crates/paper-ecash-web/: Cargo.toml  build.rs  index.html
crates/paper-ecash-web/src/: app.rs  browser.js  browser.rs  denomination.rs  designs.rs  fedimint.rs  fonts.rs  main.rs  models.rs  pdf.rs  qr.rs  storage.rs  styles.css  wallet-worker.js  wallet_runtime.rs
crates/paper-ecash-web/src/components/: design_editor.rs  designs_page.rs  issuances.rs  landing.rs  mod.rs  step_count.rs  step_denomination.rs  step_deposit.rs  step_design.rs  step_federation.rs  step_issue.rs  step_pdf.rs  wizard.rs
e2e/: docker-compose.yml  package.json  playwright.config.ts  tsconfig.json
e2e/helpers/: federation.ts  lightning.ts
e2e/nginx/: nginx.conf
e2e/scripts/: setup-federation.sh
e2e/tests/: happy-path.spec.ts  multi-denomination.spec.ts  recovery.spec.ts
public/: CNAME
