[package]
name = "invite-code-helper"
version.workspace = true
edition.workspace = true

[[bin]]
name = "invite-code-helper"
path = "src/main.rs"

[dependencies]
fedimint-core = { git = "https://github.com/elsiribot/fedimint.git", branch = "2026-01-spend-exact-rebase" }
serde_json = "1.0"
anyhow = "1"
