[package]
name = "paper-ecash-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0"
console_error_panic_hook = "0.1.7"
futures = "0.3"
gloo-storage = "0.3.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
image = { version = "0.25", default-features = false, features = ["png"] }
js-sys = "0.3"
leptos = { version = "0.7.8", default-features = false, features = ["csr"] }
lightning-invoice = "0.33.2"
printpdf = { version = "0.8", default-features = false, features = ["png", "jpeg"] }
qrcode = { version = "0.14", default-features = false }
rand = "0.8.5"
send_wrapper = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
tracing-wasm = "0.2.1"
uuid = { version = "1", features = ["v4", "serde", "js"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Blob",
    "BlobPropertyBag",
    "Clipboard",
    "Document",
    "DedicatedWorkerGlobalScope",
    "DomRect",
    "Element",
    "File",
    "FileList",
    "FileReader",
    "FileSystemFileHandle",
    "FileSystemSyncAccessHandle",
    "FileSystemDirectoryHandle",
    "HtmlAnchorElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "Location",
    "MessageEvent",
    "Navigator",
    "PointerEvent",
    "ProgressEvent",
    "Response",
    "StorageManager",
    "Url",
    "Window",
    "Worker",
] }

# Fedimint — git deps (spend-exact fork)
fedimint-bip39 = { git = "https://github.com/elsiribot/fedimint.git", branch = "2026-01-spend-exact-rebase" }
fedimint-client = { git = "https://github.com/elsiribot/fedimint.git", branch = "2026-01-spend-exact-rebase" }
fedimint-client-module = { git = "https://github.com/elsiribot/fedimint.git", branch = "2026-01-spend-exact-rebase" }
fedimint-connectors = { git = "https://github.com/elsiribot/fedimint.git", branch = "2026-01-spend-exact-rebase" }
fedimint-core = { git = "https://github.com/elsiribot/fedimint.git", branch = "2026-01-spend-exact-rebase" }
fedimint-cursed-redb = { git = "https://github.com/elsiribot/fedimint.git", branch = "2026-01-spend-exact-rebase" }
fedimint-derive-secret = { git = "https://github.com/elsiribot/fedimint.git", branch = "2026-01-spend-exact-rebase" }
fedimint-eventlog = { git = "https://github.com/elsiribot/fedimint.git", branch = "2026-01-spend-exact-rebase" }
fedimint-ln-client = { git = "https://github.com/elsiribot/fedimint.git", branch = "2026-01-spend-exact-rebase" }
fedimint-meta-client = { git = "https://github.com/elsiribot/fedimint.git", branch = "2026-01-spend-exact-rebase" }
fedimint-meta-common = { git = "https://github.com/elsiribot/fedimint.git", branch = "2026-01-spend-exact-rebase" }
fedimint-mint-client = { git = "https://github.com/elsiribot/fedimint.git", branch = "2026-01-spend-exact-rebase" }
fedimint-wallet-client = { git = "https://github.com/elsiribot/fedimint.git", branch = "2026-01-spend-exact-rebase" }

[lints]
workspace = true
